changing LLM to llama

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - .env
     environment:
       - FLASK_ENV=production
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       # Mount a directory for temporary files
       - ./temp:/app/temp
