--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -3,5 +3,5 @@ flask-cors>=4.0.0
 gunicorn>=21.2.0
 yt-dlp>=2023.12.30
 openai-whisper>=20231117
-google-generativeai>=0.3.0
+requests>=2.31.0
 numpy>=1.24.0
